:white_check_mark: Add a unit test for repository, viewModel and usecases

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,6 +22,9 @@ kotlinx-serialization = "1.6.0"
 timber = "5.0.1"
 pdfViewer = "3.2.0-beta.1"
 coil = "2.4.0"
+mockito = "3.12.4"
+robolectric = "4.5.1"
+arch-core = "2.2.0"
 
 [libraries]
 androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "androidxCore" }
@@ -59,6 +62,10 @@ kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serializa
 timber = { module = "com.jakewharton.timber:timber", version.ref = "timber" }
 pdfViewer = {module = "com.github.barteksc:android-pdf-viewer", version.ref = "pdfViewer"}
 coil = {module = "io.coil-kt:coil-compose", version.ref = "coil"}
+mockito-core = {module = "org.mockito:mockito-core", version.ref = "mockito"}
+mockito-inline = {module = "org.mockito:mockito-inline", version.ref = "mockito"}
+robolectric = {module = "org.robolectric:robolectric", version.ref = "robolectric"}
+arch-core = {module = "androidx.arch.core:core-testing", version.ref = "arch-core"}
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "androidGradlePlugin" }
